pythonscript/cffi_bindings/cdef.gen.h

typedef bool godot_bool;
typedef int godot_int;
typedef void godot_object;
typedef struct godot_string
{
  uint8_t _dont_touch_that[8];
} godot_string;
void godot_string_destroy(godot_string *p_str);
typedef struct godot_pool_string_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_string_array;
typedef struct godot_array
{
  uint8_t _dont_touch_that[8];
} godot_array;
typedef struct godot_variant
{
  uint8_t _dont_touch_that[24];
} godot_variant;
typedef struct godot_dictionary
{
  uint8_t _dont_touch_that[8];
} godot_dictionary;
void godot_object_destroy(godot_object *p_o);
godot_object *godot_global_get_singleton(char *p_name);
typedef struct godot_method_bind
{
  uint8_t _dont_touch_that[1];
} godot_method_bind;
godot_method_bind *godot_method_bind_get_method(const char *p_classname, const char *p_methodname);
void godot_method_bind_ptrcall(godot_method_bind *p_method_bind, godot_object *p_instance, const void **p_args, void *p_ret);
typedef godot_object *(*godot_class_constructor)();
godot_class_constructor godot_get_class_constructor(const char *p_classname);
godot_dictionary godot_get_global_constants();
void *godot_alloc(int p_bytes);
void *godot_realloc(void *p_ptr, int p_bytes);
void godot_free(void *p_ptr);