pythonscript/gdnative.pxd


    godot_string godot_string_trim_suffix(godot_string* p_self, godot_string* p_suffix)

    godot_string godot_string_rstrip(godot_string* p_self, godot_string* p_chars)

    godot_pool_string_array godot_string_rsplit(godot_string* p_self, godot_string* p_divisor, godot_bool p_allow_empty, godot_int p_maxsplit)

    void godot_string_destroy(godot_string* p_self)

    ctypedef struct godot_string_name:
        uint8_t _dont_touch_that[sizeof(void *)]

    void godot_string_name_new(godot_string_name* r_dest, godot_string* p_name)

    void godot_string_name_new_data(godot_string_name* r_dest, char* p_name)

    godot_string godot_string_name_get_name(godot_string_name* p_self)

    uint32_t godot_string_name_get_hash(godot_string_name* p_self)

    void* godot_string_name_get_data_unique_pointer(godot_string_name* p_self)

    godot_bool godot_string_name_operator_equal(godot_string_name* p_self, godot_string_name* p_other)

    godot_bool godot_string_name_operator_less(godot_string_name* p_self, godot_string_name* p_other)

    void godot_string_name_destroy(godot_string_name* p_self)

    void godot_object_destroy(godot_object* p_o)

    godot_object* godot_global_get_singleton(char* p_name)

    ctypedef struct godot_method_bind:
        uint8_t _dont_touch_that[1]

    godot_method_bind* godot_method_bind_get_method(char* p_classname, char* p_methodname)

    void godot_method_bind_ptrcall(godot_method_bind* p_method_bind, godot_object* p_instance, void** p_args, void* p_ret)

    godot_variant godot_method_bind_call(godot_method_bind* p_method_bind, godot_object* p_instance, godot_variant** p_args, int p_arg_count, godot_variant_call_error* p_call_error)

    cdef struct godot_gdnative_api_version:
        unsigned int major
        unsigned int minor

    cdef struct godot_gdnative_api_struct:
        unsigned int type
        godot_gdnative_api_version version
        godot_gdnative_api_struct* next

    ctypedef void (*_godot_gdnative_init_options_godot_gdnative_init_options_report_version_mismatch_ft)(godot_object* p_library, char* p_what, godot_gdnative_api_version p_want, godot_gdnative_api_version p_have)

    ctypedef void (*_godot_gdnative_init_options_godot_gdnative_init_options_report_loading_error_ft)(godot_object* p_library, char* p_what)

    ctypedef struct godot_gdnative_init_options:
        godot_bool in_editor
        uint64_t core_api_hash
        uint64_t editor_api_hash
        uint64_t no_api_hash
        _godot_gdnative_init_options_godot_gdnative_init_options_report_version_mismatch_ft report_version_mismatch
        _godot_gdnative_init_options_godot_gdnative_init_options_report_loading_error_ft report_loading_error
        godot_object* gd_native_library
        godot_gdnative_core_api_struct* api_struct
        godot_string* active_library_path

    ctypedef struct godot_gdnative_terminate_options:
        godot_bool in_editor

    ctypedef godot_object* (*godot_class_constructor)()

    godot_class_constructor godot_get_class_constructor(char* p_classname)

    godot_dictionary godot_get_global_constants()

    ctypedef void (*godot_gdnative_init_fn)(godot_gdnative_init_options*)

    ctypedef void (*godot_gdnative_terminate_fn)(godot_gdnative_terminate_options*)

    ctypedef godot_variant (*godot_gdnative_procedure_fn)(godot_array*)

    ctypedef godot_variant (*native_call_cb)(void*, godot_array*)

    void godot_register_native_call_type(char* p_call_type, native_call_cb p_callback)

    void* godot_alloc(int p_bytes)

    void* godot_realloc(void* p_ptr, int p_bytes)

    void godot_free(void* p_ptr)

    void godot_print_error(char* p_description, char* p_function, char* p_file, int p_line)

    void godot_print_warning(char* p_description, char* p_function, char* p_file, int p_line)

    void godot_print(godot_string* p_message)

    bool godot_is_instance_valid(godot_object* p_object)
